--- a/VisualPassword.Android/app/src/main/res/values/ic_launcher_background.xml
+++ b/VisualPassword.Android/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#376886</color>
+    <color name="ic_launcher_background">#0088D0</color>
 </resources>
